Convert strip! to strip so we don't break on optional fields
In tranlated input and text area components, at the moment we remove '(required)' from the field labels and use that as the label for the original translation text. Unfortunately strip! returns nil if the string is not altered, resulting in errors.

--- a/app/views/components/_translated_textarea.html.erb
+++ b/app/views/components/_translated_textarea.html.erb
@@ -1,7 +1,7 @@
 <%
   id ||= "app-c-translated-textarea-#{SecureRandom.hex(4)}"
   textarea ||= {}
-  textarea_label = textarea.dig(:label, :text).gsub("(required)", "").strip!
+  textarea_label = textarea.dig(:label, :text).gsub("(required)", "").strip
   details ||= {}
   details_text = details[:text]
   details_title = details[:title] || sanitize("English translation #{tag.span("for #{textarea_label}", class: "govuk-visually-hidden")}")
@@ -21,9 +21,7 @@
 
   <% if details_text.present? %>
     <div class="app-c-translated-textarea__english-translation govuk-!-margin-bottom-6">
-      <%= render "govuk_publishing_components/components/details", {
-        title: details_title
-      } do %>
+      <%= render("govuk_publishing_components/components/details", title: details_title) do %>
         <%= details_text %>
       <% end %>
     </div>
