--- a/app/views/components/_translated_input.html.erb
+++ b/app/views/components/_translated_input.html.erb
@@ -1,7 +1,7 @@
 <%
   id ||= "app-c-translated-input-#{SecureRandom.hex(4)}"
   input ||= {}
-  input_label = input.dig(:label, :text).gsub("(required)", "").strip!
+  input_label = input.dig(:label, :text).gsub("(required)", "").strip
   details ||= {}
   details_text = details[:text]
   details_title = details[:title] || sanitize("English translation #{tag.span("for #{input_label}", class: "govuk-visually-hidden")}")
@@ -14,9 +14,7 @@
 
   <% if details_text.present? %>
     <div class="app-c-translated-input__english-translation govuk-!-margin-bottom-6">
-      <%= render "govuk_publishing_components/components/details", {
-        title: details_title
-      } do %>
+      <%= render("govuk_publishing_components/components/details", title: details_title) do %>
         <%= details_text %>
       <% end %>
     </div>
