Re-word translation components original translation text headings
It might be confusing to see "English translation" as it is the original text and not a translation. We should also be building in flexibility for the future where the original text of the page might not be English.

--- a/app/views/components/_translated_input.html.erb
+++ b/app/views/components/_translated_input.html.erb
@@ -4,7 +4,7 @@
   input_label = input.dig(:label, :text).gsub("(required)", "").strip
   details ||= {}
   details_text = details[:text]
-  details_title = details[:title] || sanitize("English translation #{tag.span("for #{input_label}", class: "govuk-visually-hidden")}")
+  details_title = details[:title] || sanitize("Original text for #{input_label.downcase}")
 %>
 
 <%= content_tag :div, class: "app-c-translated-input", id: id do %>
