--- a/app/views/components/_translated_textarea.html.erb
+++ b/app/views/components/_translated_textarea.html.erb
@@ -4,7 +4,7 @@
   textarea_label = textarea.dig(:label, :text).gsub("(required)", "").strip
   details ||= {}
   details_text = details[:text]
-  details_title = details[:title] || sanitize("English translation #{tag.span("for #{textarea_label}", class: "govuk-visually-hidden")}")
+  details_title = details[:title] || sanitize("Original text for #{textarea_label.downcase}")
   govspeak_editor ||= false
 %>
 
