--- a/app/views/components/_translated_input.html.erb
+++ b/app/views/components/_translated_input.html.erb
@@ -18,5 +18,7 @@
         <%= details_text %>
       <% end %>
     </div>
+  <% else %>
+    <%= render "govuk_publishing_components/components/inset_text", text: "There is no #{details_title.downcase}" %>
   <% end %>
 <% end %>
