Ensure file errors link correctly for file input
Now that there is a presence validation checking file data is present
for a consultation_response_form and a calls_for_evidence_response_form
we need to ensure that errors link correctly when the validation is
triggered.

Validations can occur for this input in 2 cases.

1. the file is invalid
2. the response_form_data is not present

This ensures that errors link correctly in both situations.

--- a/app/views/admin/consultations/_form.html.erb
+++ b/app/views/admin/consultations/_form.html.erb
@@ -130,8 +130,8 @@
                       text: "Replacement"
                     },
                     name: "edition[consultation_participation_attributes][consultation_response_form_attributes][consultation_response_form_data_attributes][file]",
-                    id: "edition_consultation_participation_attributes_consultation_response_form_consultation_response_form_data_file",
-                    error_items: errors_for(consultation_response_form_data.errors, :file),
+                    id: "edition_consultation_participation_consultation_response_form_consultation_response_form_data_file",
+                    error_items: errors_for(consultation_response_form_data.errors, :file) || errors_for(consultation_response_form.errors, :consultation_response_form_data),
                   }
                 )
               }
@@ -146,7 +146,7 @@
           },
           name: "edition[consultation_participation_attributes][consultation_response_form_attributes][consultation_response_form_data_attributes][file]",
           id: "edition_consultation_participation_consultation_response_form_consultation_response_form_data_file",
-          error_items: errors_for(consultation_response_form_data.errors, :file),
+          error_items: errors_for(consultation_response_form_data.errors, :file) || errors_for(consultation_response_form.errors, :consultation_response_form_data),
         } %>
         <% if consultation_response_form_data.file_cache.present? %>
           <%= hidden_field_tag "edition[consultation_participation_attributes][consultation_response_form_attributes][consultation_response_form_data_attributes][file_cache]", consultation_response_form_data.file_cache %>
