--- a/app/views/admin/calls_for_evidence/_form.html.erb
+++ b/app/views/admin/calls_for_evidence/_form.html.erb
@@ -131,7 +131,7 @@
                   },
                   name: "edition[call_for_evidence_participation_attributes][call_for_evidence_response_form_attributes][call_for_evidence_response_form_data_attributes][file]",
                   id: "edition_call_for_evidence_participation_attributes_call_for_evidence_response_form_call_for_evidence_response_form_data_file",
-                  error_items: errors_for(call_for_evidence_response_form_data.errors, :file),
+                  error_items: errors_for(call_for_evidence_response_form_data.errors, :file) || errors_for(call_for_evidence_response_form.errors, :call_for_evidence_response_form_data),
                 }
                 )
               }
@@ -146,7 +146,7 @@
           },
           name: "edition[call_for_evidence_participation_attributes][call_for_evidence_response_form_attributes][call_for_evidence_response_form_data_attributes][file]",
           id: "edition_call_for_evidence_participation_call_for_evidence_response_form_call_for_evidence_response_form_data_file",
-          error_items: errors_for(call_for_evidence_response_form_data.errors, :file),
+          error_items: errors_for(call_for_evidence_response_form_data.errors, :file) || errors_for(call_for_evidence_response_form.errors, :call_for_evidence_response_form_data),
         } %>
         <% if call_for_evidence_response_form_data.file_cache.present? %>
           <%= hidden_field_tag "edition[call_for_evidence_participation_attributes][call_for_evidence_response_form_attributes][call_for_evidence_response_form_data_attributes][file_cache]", call_for_evidence_response_form_data.file_cache %>
